# feast-demo

./: .envrc  .gitignore  README.md  SETUP.md  flake.nix  walkthrough.md
java/: .envrc  build.gradle.kts  settings.gradle.kts
java/.direnv/: flake-profile-192c203d82de60c065d428e7d792d91b414620c8  flake-profile-192c203d82de60c065d428e7d792d91b414620c8.rc
java/batch/: build.gradle.kts
java/batch/src/main/java/com/music/batch/: BatchJobRawEventsProcessor.java  FeastRegistry.java  FeatureProcessor.java  ParquetQueryer.java  S3Client.java  TrackRealtimeBatchProcessor.java  TrackStatsProcessor.java  UserStatsProcessor.java
java/common/: build.gradle.kts
java/common/src/main/java/com/music/common/: Device.java  Genre.java  Play.java  SharedConfig.java  Utils.java
java/config/checkstyle/: checkstyle.xml
java/config/pmd/: ruleset.xml
java/producer/: build.gradle.kts
java/serving/: build.gradle.kts
java/serving/src/main/resources/: application.properties
java/stream/: build.gradle.kts
k8s/: kafka-cluster.yaml  kafka-connect-s3-sink.yaml  postgres.yaml  redis.yaml
python/: .envrc
python/.direnv/: flake-profile-be66da043d960757f1b5f01389f7b7fdf56135c3  flake-profile-be66da043d960757f1b5f01389f7b7fdf56135c3.rc
python/feast/: feature_store.yaml  features.py  pyproject.toml
python/shared/: pyproject.toml
python/shared/shared/: config.py
python/training/: pyproject.toml  seed_history.py  train.py
scripts/: init-tables.sh  port-forward.sh
terraform/: .terraform.lock.hcl  platform.tf  providers.tf
terraform/values/: seaweedfs.yaml
(+15 files in other folders)
